TokenAPI/token-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: token-api
  template:
    metadata:
      labels:
        app: token-api
    spec:
      nodeSelector:
        Service: "token-api"
        # Or alternatively: tier: "token-api"
      containers:
        - name: token-api
          image: ap-tokyo-1.ocir.io/nreio7apu7z0/develop-token-api:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: oci-config
              mountPath: /app/.oci
              readOnly: true
            - name: oci-config
              mountPath: /root/.oci
              readOnly: true
      volumes:
        - name: oci-config
          secret:
            secretName: oci-config-secret
      imagePullSecrets:
        - name: ocir-secret
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: token-api-service
spec:
  selector:
    app: token-api
  ports:
    - port: 80
      targetPort: 80
