TokenAPI/token-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: token-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /token(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: token-api-service
                port:
                  number: 80
